src/test/compile-fail/bad-name.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2

// error-pattern: expecting

fn main() {
  let x.y[int].z foo;
}
